--- a/styles/architects.css
+++ b/styles/architects.css
@@ -98,18 +98,71 @@ font-weight: 700;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
 }
+/* some fact related style */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+}
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-discription{
+    max-width: 540px;
+}
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px) {
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .facts-container, .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 10px;
     }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
 }
+
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
     .teams{
@@ -117,6 +170,13 @@ font-weight: 700;
     }
     .our-features{
         margin-left: 50px auto;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(3, 1fr);
+        gap: 50px;
     }
 
 }
