--- a/styles/architects.css
+++ b/styles/architects.css
@@ -89,6 +89,38 @@ font-weight: 700;
 #quick-list{
     font-weight: 500;
 }
+/* feature section related styles */
+.features{
+    gap: 100px;
+}
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25 rem;
+}
+#experiance-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -60px;
+    margin-top: -100px;
+}
+#experiance-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+}
 /* team and feature related styles */
 .teams{
     align-items: center;
@@ -144,7 +176,7 @@ font-weight: 700;
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams, .features{
         flex-direction: column;
     }
     .team-img-container, .facts-container, .sponsor-companies{
@@ -157,6 +189,10 @@ font-weight: 700;
     .our-features{
         margin-left: 10px;
     }
+    #experiance-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
     .sponsor-companies{
         justify-items: center;
         gap: 50px;
@@ -165,7 +201,7 @@ font-weight: 700;
 
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
