--- a/styles/architects.css
+++ b/styles/architects.css
@@ -19,7 +19,7 @@
 .text-light-gray{
 color: #727272;
 }
-.bg-light{
+.bg-light, .footer{
     background-color: rgba(255, 144, 14, 0.1);
 }
 .btn-primary{
@@ -172,6 +172,17 @@ font-weight: 700;
 }
 .sponsor-companies img{
     filter: grayscale(100%);
+}
+.footer{
+    width: 600px;
+    height: 50px;
+    border-radius: 8px;
+    margin-left: 350px;
+    margin-top: 70px;
+}
+.footer-content{
+text-align: center;
+justify-content: center;
 }
 
 /* responsive media query */
